# 1.01.01 (72773) Apr 15, 2013
> In the Under Pressure tab, fixed above-water pressure calculation, was off by a factor of about 3.3 because it was using the wrong units, see #3536
# 1.01.00 (71314) Dec 14, 2012
# 1.00.01 (71311) Dec 13, 2012
> Fixed value for fluid density in English units.
Addressed issues raised by the IntelliJ Inspection utility, see #3097
Minor fixes & doc changes to prepare for code review, see #3097
Removed unused function clampSensorPosition and usages, see #3097
# 1.00.00 (64426) May 29, 2012
Updated screenshots for website deploy
# 0.00.63 (64401) May 29, 2012
Water tower tab: Fixed: Using Match leakage, switching from Slow mo to Normal speed causes a change in height of the water in the tower
# 0.00.62 (64396) May 25, 2012
Changed mass readouts to be "kg" instead of "N"
Water tower tab: Moved ruler in front of speed and pressure toolbox
Changed gravity label from m/s/s to m/s2
# 0.00.61 (64362) May 25, 2012
Flow tab: Fixed: the black dots when injected should probably always be in front of the red dots, it seems in some cases they can get covered by the red dots
Flow tab: Moved the flux readout in front of the fluid density control
Moved the ruler in front of other objects
Fixed: In Scene 3, when the masses are dragged into the earth and released, or into the pool and released, they reappear level with the ground, not on top of the grass as they initially appear
Fixed: In Scene 3, if the masses are dragged off screen and released they disappear
Fixed: "Reset All" does not reset the atmosphere if it has been turned off
Updated licenses.txt for images
Switched from HSliderNode2 to HSliderNode1
Added screenshot for "under pressure"
# 0.00.60 (64116) May 11, 2012
Added "Under Pressure" standalone sim
# 0.00.59 (63946) May 4, 2012
Pressure tab: Made grid lines easier to see by having dark/light shading on each line
Pressure tab: Scene 1: Removed pool height side readout
Fixed: Speed sensor resizes when readout changes